Add DeMapping and InMapping.

--- a/INI/INI.csproj
+++ b/INI/INI.csproj
@@ -44,6 +44,8 @@
     <Compile Include="INIStruct.cs" />
     <Compile Include="BiMapping.cs" />
     <Compile Include="IChild.cs" />
+    <Compile Include="DeMapping.cs" />
+    <Compile Include="InMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
