Exceptions' messages And abstract "Mapping" classes.

--- a/INI/INI.csproj
+++ b/INI/INI.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeMapping.cs" />
     <Compile Include="INILine.cs" />
     <Compile Include="IParent.cs" />
     <Compile Include="INIStruct.cs" />
